--- a/references.bib
+++ b/references.bib
@@ -1,10 +1,11 @@
-@article{marrero2019,
-  author = {Marrero, Jos{\' e} and Garc{\' i}a, Alicia and Berrocoso, Manuel and Llinares, {\' A}ngeles and Rodr{\' i}guez-Losada, Antonio and Ortiz, R.},
-  journal = {Journal of Applied Volcanology},
-  year = {2019},
-  month = {7},
-  pages = {},
-  title = {Strategies for the development of volcanic hazard maps in monogenetic volcanic fields: the example of {La} {Palma} ({Canary} {Islands})},
-  volume = {8},
-  doi = {10.1186/s13617-019-0085-5},
+@article{jensen_2009,
+  author = {Shane T Jensen and Kenneth E Shirley and Abraham J Wyner},
+  title = {Bayesball: A Bayesian Hierarchical Model for Evaluating Fielding in Major League Baseball},
+  journal = {The Annals of Applied Statistics},
+  volume = {3},
+  number = {2},
+  pages = {491-520},
+  year = {2009},
+  doi = {10.1214/08-AOAS228},
+  url = {https://projecteuclid.org/journals/annals-of-applied-statistics/volume-3/issue-2/Bayesball--A-Bayesian-hierarchical-model-for-evaluating-fielding-in/10.1214/08-AOAS228.full}
 }
