--- a/references.bib
+++ b/references.bib
@@ -9,3 +9,17 @@
   doi = {10.1214/08-AOAS228},
   url = {https://projecteuclid.org/journals/annals-of-applied-statistics/volume-3/issue-2/Bayesball--A-Bayesian-hierarchical-model-for-evaluating-fielding-in/10.1214/08-AOAS228.full}
 }
+
+@website{uzr_fangraphs,
+  author = {Piper Slowinski},
+  title = {UZR},
+  year = {2010},
+  url = {https://library.fangraphs.com/defense/uzr/}
+}
+
+@website{savant_positioning,
+  author = {Baseball Savant},
+  title = {Statcast Positioning Data},
+  year = {2020},
+  url = {https://baseballsavant.mlb.com/visuals/fielder-positioning}
+}
